# PDF2Text-Arabic

./: .gitignore  CHANGELOG.md  LICENSE  OCR_COMPARISON.md  README.md  _run_footer_fix.py  apply_patch.py  barlaman_audit.py  bbox_audit.py  check_aspect_ratio.py  check_bboxes.py  check_columns.py  check_layout_2023.py  corpus_dump.txt  dahir_test.ipynb  debug_all_pages_visual.py  debug_bbox.py  debug_borders_58.py  debug_broken_header.py  debug_compare_strategies.py  debug_crop_0.ipynb  debug_drawings.py  debug_drawings_58.py  debug_extract.py  debug_extract_17.py  debug_extract_full_17.py  debug_footer.py  debug_footer_text.py  debug_h_lines.py  debug_mixed_strategy.py  debug_naw_p8.py  debug_naw_p8_text.py  debug_new_format.py  debug_p17_fallback_again.py  debug_p60_candidates.py  debug_p60_cells.py  debug_p60_etc.py  debug_p60_extract_tables.py  debug_p60_raw_extract.py  debug_p60_slice.py  (+121 more)
.claude/: settings.local.json
.github/: release-please-config.json
.github/workflows/: publish.yml  release-please.yml
conductor/: auto-crop-debug-improvement.md  table-container-security.md
pdf2text_arabic/: __init__.py  _chars.py  _extract.py  _footer.py  _ocr.py  _tables.py  _tables_orig.py  _text.py  cli.py  debug.py
pdfarabic/: __init__.py  _chars.py  _extract.py  _footer.py  _tables.py  cli.py
scripts/: audit_output_language.py
tests/: test_ocr_strategy.py  test_text_quality.py
