[project]
name = "pdf2text-arabic"
version = "0.1.6"
description = "Arabic PDF text extraction with ligature and RTL fixes"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "google-genai>=1.73.0",
    "ollama>=0.6.1",
    "openai>=2.31.0",
    "pillow>=12.2.0",
    "pymupdf>=1.27.2.2",
    "requests>=2.33.1",
]

[project.scripts]
pdf2text-arabic = "pdf2text_arabic.cli:main"
